--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         versionCode 1
         versionName "0.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
     }
     buildTypes {
         release {
@@ -52,6 +53,8 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
     implementation 'com.google.code.gson:gson:2.2.4'
     implementation 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
     implementation 'com.github.ForgetAll:LoadingDialog:v1.0.4'
 //    compile 'org.greenrobot:greendao:3.2.2'
     implementation 'org.xutils:xutils:3.5.0'
