--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:design:26.1.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -53,8 +54,8 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
     implementation 'com.google.code.gson:gson:2.2.4'
     implementation 'com.squareup.okhttp3:okhttp:3.2.0'
-    compile 'com.jakewharton:butterknife:6.1.0'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
+    implementation 'com.jakewharton:butterknife:6.1.0'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
     implementation 'com.github.ForgetAll:LoadingDialog:v1.0.4'
 //    compile 'org.greenrobot:greendao:3.2.2'
     implementation 'org.xutils:xutils:3.5.0'
