--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
 
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.1.0'
@@ -58,8 +58,9 @@ dependencies {
     implementation 'com.jakewharton:butterknife:6.1.0'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
     implementation 'com.github.ForgetAll:LoadingDialog:v1.0.4'
-//    compile 'org.greenrobot:greendao:3.2.2'
-    implementation 'org.xutils:xutils:3.5.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    //    compile 'org.greenrobot:greendao:3.2.2'
+    implementation group: 'org.xutils', name: 'xutils', version: '3.5.0'
+    implementation group: 'com.squareup.picasso', name: 'picasso', version: '2.71828'
+    implementation group: 'top.zibin', name: 'Luban', version: '1.1.6'
 
 }
