--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 27 15:31:36 CST 2018
-sdk.dir=/Users/Shared/Android/sdk
+#Mon Jul 02 21:25:08 CST 2018
+ndk.dir=D\:\\IDE\\Android\\SDK\\ndk-bundle
+sdk.dir=D\:\\IDE\\Android\\SDK
