--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sinoyd.frameapplication">
 
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -21,6 +27,20 @@
         android:roundIcon="@mipmap/shlogo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!-- 声明service组件 -->
+        <service
+            android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":remote" >
+        </service>
+
+        <!-- AK鉴权 -->
+        <!-- meta-data需要写在application中 -->
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="Fyu0cZxwwKTMYtlxVZdiWSQXKlLTYOCQ" />
+
         <!-- 设置key -->
         <meta-data
             android:name="com.amap.api.v2.apikey"
@@ -59,6 +79,8 @@
             android:screenOrientation="landscape" />
         <activity android:name=".KotlinFrame.Code.UI.Task_management_Activity" />
         <activity android:name=".KotlinFrame.Code.UI.Site_location_Activity" />
+        //测试用
+        <activity android:name=".KotlinFrame.Code.UI.LocationDemo"/>
         <activity android:name=".KotlinFrame.Code.UI.Monitoring_data_Activity" />
         <activity android:name=".KotlinFrame.Code.UI.Alarm_information_Activity" />
         <activity android:name=".KotlinFrame.Code.UI.Atatistical_analysis_Activity" />
@@ -84,5 +106,6 @@
             android:name=".KotlinFrame.Code.UI.New_Accuracy_and_precision_Activity"
             android:windowSoftInputMode="adjustPan"></activity>
     </application>
+
 
 </manifest>
